@@ -7,6 +7,7 @@ import dev.langchain4j.guardrail.InputGuardrail;
 import dev.langchain4j.guardrail.InputGuardrailResult;
 import dev.langchain4j.service.MemoryId;
 import dev.langchain4j.service.UserMessage;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
@@ -45,8 +46,8 @@ class InputGuardrailOnClassAndMethodTest extends BaseGuardrailTests {
         static MyAiService create() {
             return createAiService(
                     MyAiServiceWithoutClassAnnotations.class,
-                    List.of(OKGuardrail.class),
-                    List.of(),
+                    Arrays.asList(OKGuardrail.class),
+                    Arrays.asList(),
                     builder -> builder.chatModel(new MyChatModel()));
         }
     }
